# centaur

./: pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  console-ci.yml  docs.yml  publish-images.yml  release-chart.yml
contrib/chart/: Chart.yaml  values.schema.json  values.yaml
contrib/chart/templates/: _helpers.tpl  apirs.yaml  console.yaml  networkpolicy.yaml  repo-cache-git-mirror.yaml  repo-cache-hostpath.yaml  repo-cache-mirror.yaml  repo-cache-secret.yaml  repo-cache.yaml  slackbotv2.yaml  workloads.yaml
crates/harness-server/src/: bridge.rs  bridge_host.rs  claude.rs  client_tools.rs  codex.rs  lib.rs  main.rs  wire.rs
docs/pages/: deploying-in-production.mdx
docs/pages/reference/: configuration.mdx
docs/pages/secrets/: advanced-permissioning.mdx
docs/public/md/: deploying-in-production.md
services/api-rs/: Cargo.toml
services/api/api/: agent.py  deps.py  iron-proxy.base.yaml  proxy_config.py  runtime_control.py  tool_manager.py  tool_server_app.py  workflow_engine.py  workflow_executor.py
services/api/tests/: test_agent_control_plane.py  test_normalize.py  test_proxy_config.py  test_repo_cache_server.py  test_sandbox_entrypoint.py  (+5 more)
services/sandbox/: Dockerfile  SYSTEM_PROMPT.md  entrypoint.sh  git-cache-wrapper.sh  install_tool_shims.py  repo-cache-server.py  test_install_tool_shims.py
tools/business/mercury/: .env.example  cli.py  client.py  pyproject.toml
tools/business/mercury/tests/: test_client.py
tools/comms/typefully/: .env.example  cli.py  client.py  pyproject.toml
tools/comms/typefully/tests/: test_client.py
(+70 files in other folders)
