[project]
name = "mercury"
description = "Mercury Banking API - accounts, transactions, recipients, payments, AR, webhooks"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mercury = "mercury.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "MERCURY_API_KEY", match_headers = ["Authorization"], hosts = ["api.mercury.com", "api-sandbox.mercury.com"]}]
optional_secrets = ["MERCURY_API_BASE_URL"]
